FIX: Returns unmodifiable list of strategies
Ensures the list of hash algorithm strategies returned by getAllStrategies() is unmodifiable, preventing external modification of the internal strategies map.

This improves the overall security and maintainability of the HashAlgorithmFactory class by preventing unintended side effects from external code modifying the list of strategies.